syntax = "proto3";

package pb;
option go_package="/pb";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser (UserRequest) returns (UserResponse);
  rpc GetUsers(UsersRequest) returns (UsersResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message CreateUserRequest{
  User user=1;
}

message CreateUserResponse {
  User user=1;
}

message UserRequest {
  string id = 1;
}

message UserResponse {
User user=1;
}

message UsersRequest{}

message UsersResponse{
   repeated User users=1;
}

message UpdateUserRequest{
    string id=1;
    User user=2;
}

message UpdateUserResponse{
    User user=1;
}

message DeleteUserRequest{
    string id=1;
}

message DeleteUserResponse{
    bool success=1;
}